// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`🗄 App Store Init 1`] = `
Object {
  "articlesStore": Object {
    "list": Array [],
  },
  "isLoading": true,
  "router": Object {
    "params": "",
    "pathname": "",
  },
  "sourcesStore": Object {
    "isLoading": true,
    "sources": Array [],
  },
  "title": "Mobx Starter kit",
}
`;

exports[`🗄 App Store Init 2`] = `
Object {
  "articlesStore": Object {
    "list": Array [],
  },
  "isLoading": true,
  "router": Object {
    "params": "",
    "pathname": "",
  },
  "sourcesStore": Object {
    "isLoading": false,
    "sources": Array [
      Object {
        "category": undefined,
        "description": "description",
        "id": "abc",
        "name": undefined,
        "url": "url",
      },
    ],
  },
  "title": "Mobx Starter kit",
}
`;
